--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "iot-data-simulator"
 version = "0.1.0"
 description = "Generate realistic industrial IoT sensor data and push to pluggable sinks."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 license = "MIT"
 authors = [{name = "IoT Simulator Contributors"}]
 keywords = ["iot", "simulator", "sensor", "data-generator", "industrial", "kafka", "delta-lake"]
@@ -15,6 +15,8 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering",
