chore: update project metadata and CI configuration
- Added Documentation and Changelog URLs to pyproject.toml for better project visibility.
- Introduced versioning configuration with bumpver in pyproject.toml to streamline version management.
- Enhanced CI workflow to support multiple Python versions (3.10, 3.11, 3.12, 3.13) for broader compatibility.
- Updated CI dependencies to include pytest-mock for improved testing capabilities.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/taran13m/iot-simulator-python"
 Repository = "https://github.com/taran13m/iot-simulator-python"
+Documentation = "https://github.com/taran13m/iot-simulator-python#readme"
+Changelog = "https://github.com/taran13m/iot-simulator-python/blob/main/CHANGELOG.md"
 "Bug Tracker" = "https://github.com/taran13m/iot-simulator-python/issues"
 
 [project.optional-dependencies]
@@ -66,9 +68,17 @@ iot-simulator = "iot_simulator.__main__:main"
 [tool.setuptools.packages.find]
 include = ["iot_simulator*"]
 
-[tool.black]
-line-length = 120
-target-version = ["py312"]
+[tool.bumpver]
+current_version = "0.1.0"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message = "Bump version {old_version} -> {new_version}"
+commit = true
+tag = true
+push = false
+
+[tool.bumpver.file_patterns]
+"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
+"iot_simulator/__init__.py" = ['__version__ = "{version}"']
 
 [tool.ruff]
 line-length = 120
