--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,17 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - uses: astral-sh/setup-uv@v1
 
@@ -16,7 +25,7 @@ jobs:
           uv pip install -r requirements.txt
 
       - name: Install dev tools
-        run: uv pip install pytest pytest-cov pytest-asyncio ruff build twine
+        run: uv pip install pytest pytest-cov pytest-asyncio pytest-mock ruff build twine
 
       - name: Lint with ruff
         run: uv run ruff check iot_simulator tests
