chore: enhance CI workflows and improve sensor configuration
- Updated CI configuration to include separate linting and testing jobs, improving clarity and maintainability.
- Added Python 3.12 support in CI workflows and ensured dependencies are installed correctly.
- Enhanced the sensor configuration in _sensor_catalog.py for consistency in naming and unit formatting.
- Refactored generator.py to improve readability by using keyword arguments in SensorConfig initialization.
- Improved test cases in test_sensor_models.py to validate the new configuration structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,48 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  test:
+  lint:
+    name: Lint & Format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - uses: astral-sh/setup-uv@v1
+        with:
+          enable-cache: true
+
+      - name: Install dependencies
+        run: |
+          uv venv .venv
+          uv pip install -e ".[dev]"
+
+      - name: Lint with ruff
+        run: uv run ruff check iot_simulator tests
+
+      - name: Check formatting with ruff
+        run: uv run ruff format --check iot_simulator tests
+
+      - name: Type-check with mypy
+        continue-on-error: true  # TODO: fix 51 mypy errors then remove this
+        run: uv run mypy iot_simulator
+
+  quality:
+    name: Tests (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -18,26 +57,53 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - uses: astral-sh/setup-uv@v1
+        with:
+          enable-cache: true
 
       - name: Install dependencies
         run: |
           uv venv .venv
-          uv pip install -r requirements.txt
-
-      - name: Install dev tools
-        run: uv pip install pytest pytest-cov pytest-asyncio pytest-mock ruff build twine
-
-      - name: Lint with ruff
-        run: uv run ruff check iot_simulator tests
+          uv pip install -e ".[dev]"
 
       - name: Run tests with coverage
-        run: uv run pytest --cov=iot_simulator -q
+        run: uv run pytest --cov=iot_simulator --cov-report=xml --cov-fail-under=90 -q
 
-      - name: Check coverage threshold
-        run: uv run pytest --cov=iot_simulator --cov-fail-under=90 -q
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        if: matrix.python-version == '3.12'
+        with:
+          name: coverage-report
+          path: coverage.xml
 
-      - name: Build package (dry run)
+  package:
+    name: Build & Verify Package
+    needs: [lint, quality]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - uses: astral-sh/setup-uv@v1
+        with:
+          enable-cache: true
+
+      - name: Install build tools
+        run: |
+          uv venv .venv
+          uv pip install build twine
+
+      - name: Build sdist and wheel
         run: uv run python -m build
 
       - name: Verify package metadata
         run: uv run twine check dist/*
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
