--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "pytest-mock>=3.12",
     "ruff>=0.4",
     "mypy>=1.8",
+    "bumpver>=2023.1129",
 ]
 all = [
     "iot-data-simulator[kafka]",
