--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,6 @@ jobs:
         run: uv run ruff format --check iot_simulator tests
 
       - name: Type-check with mypy
-        continue-on-error: true  # TODO: fix 51 mypy errors then remove this
         run: uv run mypy iot_simulator
 
   quality:
@@ -47,7 +46,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
 
