fix: correct fallback release notes in publish workflow
Updated the fallback text in the publish workflow to use 'Release $VERSION' instead of a Python string literal, ensuring proper variable interpolation when no CHANGELOG entry is found.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -163,7 +163,7 @@ jobs:
           text = open('CHANGELOG.md').read()
           pattern = rf'## \[{re.escape(sys.argv[1])}\].*?\n(.*?)(?=\n## \[|$)'
           match = re.search(pattern, text, re.DOTALL)
-          print(match.group(1).strip() if match else f'Release {sys.argv[1]}')
+          print(match.group(1).strip() if match else 'Release $VERSION')
           " "$VERSION")
           {
             echo "notes<<CHANGELOG_EOF"
